k8s/apps-manifests/demos/httpbin/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default.bogus.name
  creationTimestamp: null
  labels:
    istio-injection: enabled
spec: {}
status: {}
