k8s/apps-manifests/demos/httpbin/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: httpbin
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - argo-cd/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /httpbin
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
